[package]
authors = ["tropicbliss <tropicbliss@protonmail.com>"]
edition = "2021"
name = "symphonia"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
crossbeam-channel = "0.5"
napi = "2"
napi-derive = "2"
rodio = { version = "0.17", features = ["symphonia-all"], default_features = false }

[build-dependencies]
napi-build = "2"
