[package]
authors = ["tropicbliss <tropicbliss@protonmail.com>"]
edition = "2021"
name = "symphonia"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
crossbeam-channel = "0.5.7"
napi = "2.12.1"
napi-derive = "2.12.2"
rodio = { version = "0.17.1", features = ["symphonia-all"], default_features = false }

[build-dependencies]
napi-build = "2.0.1"
